--- a/_posts/2020-03-02-bl2jpvo.md
+++ b/_posts/2020-03-02-bl2jpvo.md
@@ -4,7 +4,7 @@ title:  "Borderlands 2 JP VO/EN Dub"
 categories: gaming
 ---
 
-[Attachment.zip](Attachment.zip)
+[Attachment.zip](https://mega.nz/#!ZRtyXIIA!Anwx2MvCSA9SWSjKBvA2mhjnbODkhY3HrSXKmrZNTmI)
 
 How to Borderlands 2 Japanese Voiceover/Dub with English subtitle. This folder only contain JP audio only, and part of The Handsome Collection.
 
